[package]
name = "guest"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "By-value memory storage without by-value memory access."
repository = "https://github.com/Vi-Kitten/Guest"
readme = "README.md"
keywords = ["drop"]
rust-version = "1.77.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-scoped = "0.9.0"
futures = "0.3.30"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["full"] }
async-scoped = { features = ["use-tokio"] }
